--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,99 @@ manager/
 ROOT/
 docs/
 
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+# folders
+examples/
+host-manager/
+manager/
+ROOT/
+docs/
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# dotenv environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Testing coverage
+coverage/
+
+# Misc
+*.tgz
+*.gz
+*.zip
+
+# Parcel cache
+.cache/
+
+# Next.js (if used)
+.next/
+
+# React Native (if used)
+android/
+ios/
+
+# Storybook
+out/
+storybook-static/
+
+# Firebase
+.firebase/
+
+# Local development
+*.local
